RESOLVED FIXED160416
[iOS] A video element that does not pause after exiting from fullscreen should be allowed to continue playing inline
https://bugs.webkit.org/show_bug.cgi?id=160416
Summary [iOS] A video element that does not pause after exiting from fullscreen shoul...
Eric Carlson
Reported 2016-08-01 12:22:00 PDT
A video element that does not pause after exiting from fullscreen should be allowed to continue playing inline.
Attachments
Proposed patch. (3.50 KB, patch)
2016-08-01 12:31 PDT, Eric Carlson
no flags
Proposed patch. (3.50 KB, patch)
2016-08-01 12:34 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2016-08-01 12:22:52 PDT
Eric Carlson
Comment 2 2016-08-01 12:31:59 PDT
Created attachment 285030 [details] Proposed patch.
Eric Carlson
Comment 3 2016-08-01 12:34:07 PDT
Created attachment 285031 [details] Proposed patch.
WebKit Commit Bot
Comment 4 2016-08-01 13:49:54 PDT
Comment on attachment 285031 [details] Proposed patch. Clearing flags on attachment: 285031 Committed r203984: <http://trac.webkit.org/changeset/203984>
WebKit Commit Bot
Comment 5 2016-08-01 13:49:58 PDT
All reviewed patches have been landed. Closing bug.
Eric Carlson
Comment 6 2016-08-01 14:27:49 PDT
Correct, the Radar bug is actually <rdar://problem/27409854>
Note You need to log in before you can comment on or make changes to this bug.