[iOS] A video element that does not pause after exiting from fullscreen should be allowed to continue playing inline https://bugs.webkit.org/show_bug.cgi?id=160416 <rdar://problem/27409854>

Reviewed by Alex Christensen.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::exitFullscreen): If playback normally requires fullscreen but the
element was not paused when exiting from fullscreen, set the 'playsinline' attribute so we won't
force fullscreen if playback is paused and resumes, and set the 'controls' attribute so the
user can control playback.


Canonical link: https://commits.webkit.org/178555@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203984 268f45cc-cd09-0410-ab3c-d52691b4dbfc